...
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/prev_exercise_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".10"
            android:background="@drawable/view_action_exercise_drawable"
            android:scaleType="center"
            app:srcCompat="@drawable/action_arrow_left"/>
...
                app:borderWidth="0dp"
                app:elevation="0dp"
                app:fabSize="mini"/>
        </RelativeLayout>

        <ImageButton
            android:id="@+id/next_exercise_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".10"
            android:background="@drawable/view_action_exercise_drawable"
            android:scaleType="center"
            app:srcCompat="@drawable/action_arrow_right"/>
...
