...
        android:paddingRight="16dp"
        android:gravity="center_vertical"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:textColor="#87000000"
        android:textSize="14sp"
        android:text="Scapular Shrugs"
        app:typeface="roboto_medium"/>

    <com.devspark.robototextview.widget.RobotoTextView
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:paddingLeft="16dp"
...
